--- a/slides/tutorials_evaporation.qmd
+++ b/slides/tutorials_evaporation.qmd
@@ -39,7 +39,7 @@ Given the following measurements at midday:
 Evaluate the **advantages and limitations** of the following methods for measuring or estimating evaporation in a catchment:
 1. Evaporation pans
 2. Lysimeters
-3. Water balance method
+3. Water balance method (catchment scale)
 4. Eddy covariance
 
 For each method, comment on:
@@ -49,7 +49,7 @@ For each method, comment on:
 
 
 ## The Thornthwaite Method for Estimating Potential Evapotranspiration
-**Introduction -** In hydrologic analysis, estimating evaporation is crucial but challenging. While direct measurements using lysimeters provide the most accurate data, these devices are expensive and complex to maintain. In data-sparse regions, empirical models offer practical alternatives. The **Thornthwaite method** is one of the simplest and most widely used approaches, requiring only mean monthly air temperature and geographic latitude to estimate potential evapotranspiration (PET).
+**Introduction -** In hydrologic analysis, estimating evaporation is crucial but challenging. While direct measurements using lysimeters provide the most accurate data, these devices are expensive and complex to maintain. In data-sparse regions, empirical models offer practical alternatives. The **Thornthwaite method** is one of the simplest and most widely used approaches, requiring only mean monthly air temperature and geographic latitude to estimate potential evapotranspiration ($ E_{pt} $).
 
 The Thornthwaite equation estimates monthly potential evapotranspiration as:
 
@@ -71,7 +71,7 @@ Where:
 
    $ a = 0.492 + 0.0119 I - 0.0000771 I^2 + 0.000000675 I^3 $
 
-3. **Apply daylight correction** by multiplying monthly PET by a latitude-dependent factor to account for seasonal variations in day length.
+3. **Apply daylight correction** by multiplying monthly $ E_{pt} $ by a latitude-dependent factor to account for seasonal variations in day length.
 
 The table below provides daylight correction factors for different latitudes:
 
@@ -91,7 +91,7 @@ The table below provides daylight correction factors for different latitudes:
 
 **Problem Statement:**
 
-You are tasked with estimating the total potential evapotranspiration for a growing season in Saskatoon, Canada (latitude approximately 52°N). Using the Thornthwaite method, calculate the total PET for the period from May 16 to September 24, 1961.
+You are tasked with estimating the total potential evapotranspiration for a growing season in Saskatoon, Canada (latitude approximately 52°N). Using the Thornthwaite method, calculate the total $ E_{pt} $ for the period from May 16 to September 24, 1961.
 
 **Given Data:**
 
@@ -111,8 +111,6 @@ You are tasked with estimating the total potential evapotranspiration for a grow
 
 1. Calculate the annual heat index $ I $ using all months with temperatures above 0°C
 2. Determine the exponent $ a $ using the cubic polynomial
-3. Calculate monthly PET values for May through September
+3. Calculate monthly $ E_{pt} $ values for May through September
 4. Apply appropriate daylight correction factors for latitude 52°N
-5. Sum the corrected monthly values to find the total PET for the specified period
-
-**Note:** For the partial months (May 16-31 and September 1-24), you may use the full monthly values or prorate based on the number of days in each period.
+5. Sum the corrected monthly values to find the total $ E_{pt} $ for the specified period
